Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-13081

QT Creator crashes when adding android sdk path

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 3.2.2
    • Qt Creator 3.2.1
    • Android Support
    • None
    • OS X Mavericks
      Mac OS X 10.9.5 (13F34)

      OS X Mavericks. Qt Creator crashes when attempting to add Android SDK path. Repeatable.

      Process: Qt Creator [83669]
      Path: /Users/USER/*/Qt Creator.app/Contents/MacOS/Qt Creator
      Identifier: org.qt-project.qtcreator
      Version: 3.2.1 (3.2.1)
      Code Type: X86-64 (Native)
      Parent Process: launchd [274]
      Responsible: Qt Creator [83669]
      User ID: 501

      Date/Time: 2014-09-21 14:23:28.122 -0400
      OS Version: Mac OS X 10.9.5 (13F34)
      Report Version: 11
      Anonymous UUID: 68FEB525-D4BF-32A5-6235-E74F620478A2

      Crashed Thread: 0 Dispatch queue: com.apple.main-thread

      Exception Type: EXC_BAD_ACCESS (SIGSEGV)
      Exception Codes: KERN_INVALID_ADDRESS at 0x0000000000000004

      OS X crash log: http://pastebin.com/LA4ma0cC

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            jocala jocala
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes