Android: Be more careful in androidVirtualDevices()

The backtrace in QTCREATORBUG-13081 suggest that something with
dev.serialNumber is wrong. The input (attached to the bug report) does
not indicate why we would misparse it. So add checking code
to all places where we index into line.

Change-Id: Ic8e4afb763dc1c899e9a1d0503d6494e2aea1223
Reviewed-by: BogDan Vatra <bogdan@kde.org>